# twat-cache

./: .gitignore  CHANGELOG.md  CLEANUP.txt  DEPENDENCIES.txt  HISTORY.md  LOG.md  Makefile  NEXT.md  PLAN.md  PROMPT.txt  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  TODO.md  VARIA.md  VERSION.txt  WORK.md  WORKFLOW_SETUP.md  mkdocs.yml  pyproject.toml  twat_search.txt
.cursor/rules/: filetree.mdc
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: 2025-03-04_03-25-codebase-analysis-and-todo-md-update.md  2025-03-04_05-35-implementation-of-todo-phases-1,-2,-3.md  2025-03-04_05-35-untitled.md  2025-03-04_08-00-project-maintenance-and-documentation-update.md  2025-03-04_08-41-managing-todo-md-tasks.md  2025-03-04_11-30-untitled.md  caching-strategies-for-twat-cache-library.md  codebase-improvement-and-dependency-management-plan.md  documentation-update-and-task-management.md  implementing-todo-item.md  merging-files-from-wrong-location.md  project-documentation-and-command-execution.md  project-overview-and-todo-execution.md  project-review-and-implementation.md  project-setup-and-implementation-steps.md  project-setup-and-task-implementation.md  project-setup-and-task-management.md  refactoring-plan-for-twat-cache-system.md  refining-decorators-and-integration-goals-1.md  refining-decorators-and-integration-goals.md  running-lint-fix-command.md  todo-list-update-and-progress-logging.md  untitled.md  update-todo-and-log-for-project.md  updating-todo-and-running-development-commands.md  updating-todos-and-project-documentation.md
REVIEW/: FILES-cla.md  FILES-cod.md  TODO-cla.md  TODO-cod.md
docs/: BUILD_AND_RELEASE.md  context_management.md
examples/: backend_selection.py
scripts/: README.md  build.py  release.py  setup-dev.sh  version.py
src/twat_cache/: __init__.py  __main__.py  backend_selector.py  cache.py  config.py  context.py  decorators.py  exceptions.py  hybrid_cache.py  logging.py  paths.py  type_defs.py  types.py  utils.py
src/twat_cache/engines/: __init__.py  aiocache.py  base.py  cachebox.py  cachetools.py  common.py  diskcache.py  functools.py  functools_engine.py  joblib.py  klepto.py  lru.py  manager.py  redis.py
src/twat_cache/types/: cachebox.pyi
src_docs/: changelog.md  faq.md  getting-started.md  index.md
src_docs/api/: config.md  decorators.md  index.md
src_docs/user-guide/: configuration.md  decorators.md  index.md  installation.md  quickstart.md
tests/: __init__.py  conftest.py  test_backend_selector.py  test_benchmark.py  test_cache.py  test_config.py  test_constants.py  test_context.py  test_context_simple.py  test_decorators.py  test_engines.py  test_exceptions.py  test_exceptions_simple.py  test_fallback.py  test_integration.py  test_package.py  test_redis_cache.py  test_sql_cache.py  test_twat_cache.py
