[build-system]
requires = [
    "setuptools>=67.0.0",
    "setuptools_scm>=8.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["twat_cache"]

[tool.setuptools_scm]
version_file = "src/twat_cache/__version__.py"
write_to = "src/twat_cache/__version__.py"

[project]
name = "twat_cache"
description = "Advanced caching library for Python, part of the twat framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
keywords = [
    "caching", 
    "cache", 
    "memorization", 
    "performance", 
    "optimization"
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "diskcache>=5.6.1",
    "joblib>=1.3.2",
    "cachetools>=5.3.2",
]

[project.urls]
Homepage = "https://github.com/twardoch/twat"
Documentation = "https://github.com/twardoch/twat/tree/main/docs"
Issues = "https://github.com/twardoch/twat/issues"

[project.entry-points."twat.plugins"]
cache = 'twat_cache'

[project.optional-dependencies]
cachebox = ['cachebox>=4.5.1']
cachetools = ['cachetools>=5.5.1']
aiocache = ['aiocache>=0.12.3']
klepto = ['klepto>=0.2.6']
diskcache = ['diskcache>=5.6.3']
joblib = ['joblib>=1.4.2']
all = [
    'platformdirs>=4.3.6',
    'cachebox>=4.5.1',
    'cachetools>=5.5.1',
    'aiocache>=0.12.3',
    'klepto>=0.2.6',
    'diskcache>=5.6.3',
    'joblib>=1.4.2',
]

[tool.pytest.ini_options]
minversion = "8.0.0"
addopts = "-v"
testpaths = ["tests"]
